# rle

./: .gitignore  CMakeLists.txt  LaneModel.dne  README.md  changelog.txt  doxyfile  package.xml
bag/: A2-ESP_inverted.bag  A4-5FULL-MONO.bag  A4-5FULL-STEREOv2.bag  A4-5FULL_msglines.bag  A4-5_0_msglines.bag  A4-5_1_msglines.bag  A4-ITA_inverted.bag  GT-A4-5_0.txt  GT-A4-5_1.txt  GT-A4FULL.txt  ISIS-01-MONO.bag  ISIS_01.bag  ISIS_01.txt  README.txt  mldhighway.a4.001_2017-12-18-12-38-52.bag  mldhighway.detector.a4_5#002.full_2017-12-13-16-07-59.bag  mldhighway.detector.a4_5.full.bag  mldhighway.isislab.001_2017-12-15-17-07-21.bag  special.issue.italy.mono.noClothoid.yesLines.bag  special.issue.italy.stereo.noClothoid.yesLines.bag  special.issue.spain.mono.noClothoid.yesLines.left._2018-01-13-23-56-11.bag  special.issue.spain.mono.noClothoid.yesLines.right.bag  special.issue.spain.mono.yesClothoid.noLines.left._2018-01-14-11-59-09.bag  special.issue.spain.stereo.noClothoid.yesLines.bag  special.issue.spain.stereo.noClothoid.yesLines.left._2018-01-14-01-26-24.bag  special.issue.spain.stereo.noClothoid.yesLines.left._2018-01-14-23-06-51.bag  special.issue.spain.stereo.yesClothoid.noLines.left._2018-01-14-14-36-18.bag  special.issue.spain.stereo.yesClothoid.noLines.left.bag
cfg/: road_layout_estimation.cfg  visual_odometry_fake.cfg  visual_odometry_kitti_viso.cfg  visual_odometry_nvm.cfg  visual_odometry_test.cfg
include/: csv.h
include/netica/: Netica.h  NeticaCPP.cpp  NeticaCPP.h  NeticaEx.h
launch/: 00_kitti_viso_odometry_launcher.launch  fake_launcher.launch  fake_no_err_launcher.launch  fake_odometry_launcher.launch  gps_receiver.launch  kitti_viso_odometry_launcher.launch  launch4Process.launch  nvm_launcher.launch  nvm_odometry_launcher.launch  only_libviso.launch  rle_decoupling.launch  rle_generate_VO_bags.launch  rle_kitti.launch  rle_kitti_VO.launch  rle_kittiplayer.launch  rviz-conf.rviz  tesi.launch  test_launcher.launch  test_odometry_launcher.launch  total_launcher2.launch
launch/old_launchers/: fake_odometry_launcher.launch  nvm_odometry_launcher.launch  test_odometry_launcher.launch  total_launcher.launch
msg/: msg_debugInformation.msg  msg_lanes.msg  msg_lineInfo.msg  msg_lines.msg  msg_roadState.msg
rviz/: road_layout_manager.rviz  visual_odometry_kitti_viso.rviz  visual_odometry_kitti_viso_mapbox.rviz  visual_odometry_nvm.rviz  visual_odometry_test.rviz
scripts/: convert_all.sh  read_LIBVISO_results_and_generate_lines_kml.sh  read_RLE_results_and_generate_lines_kml.sh  read_RTK_results_and_generate_lines_kml.sh  read_kitti_rle_files_and_generate_lines_kml.sh  read_kitti_rtk_files_and_generate_lines_kml.sh  read_kitti_rtk_files_and_generate_points_kml.sh
src/: Camera.cpp  Camera.h  Edge.hpp  Facade.hpp  LayoutManager.cpp  LayoutManager.h  MeasurementModel.cpp  MeasurementModel.h  Odometry.cpp  Odometry.h  Utils.cpp  Utils.h  VisualOdometry.cpp  VisualOdometry.h  eigenmultivariatenormal.hpp  fake_callback.cpp  lane.cpp  lane_3.cpp  lane_4.cpp  layout_manager.cpp  listener_node.cpp  model.cpp  nvm_publisher.cpp  roadStateComponent_fake.cpp  road_layout_estimation.cpp  shared_test.cpp  visual_odometry_fake.cpp  visual_odometry_kitti_viso.cpp  visual_odometry_nvm.cpp  visual_odometry_test.cpp
src/nvm_files/: reconstruction4-sorted-decimali_tagliati.txt
src/particle/: LayoutComponent.cpp  LayoutComponent.h  LayoutComponent_Building.cpp  LayoutComponent_Building.h  LayoutComponent_Crossing.cpp  LayoutComponent_Crossing.h  LayoutComponent_OSMDistance.cpp  LayoutComponent_OSMDistance.h  LayoutComponent_RoadLane.cpp  LayoutComponent_RoadLane.h  LayoutComponent_RoadState.cpp  LayoutComponent_RoadState.h  MotionModel.cpp  MotionModel.h  Particle.cpp  Particle.h  ParticleComponent.cpp  ParticleComponent.h  State6DOF.cpp  State6DOF.h  state6dof.cpp  state6dof.h
srv/: getAllParticlesLatLon.srv
