<?xml version="1.0"?>
<package>
  <name>road_layout_estimation</name>
  <version>2.0.0</version>
  <description>The road_layout_estimation package</description>

  <maintainer email="ballardini@disco.unimib.it">Augusto Luis Ballardini</maintainer>
  <license>BSD</license>
  <author email="iralabdisco@gmail.com">IRALAB Team - www.ira.disco.unimib.it</author>

  <buildtool_depend>catkin</buildtool_depend>

        <build_depend>cmake_modules</build_depend>

	<build_depend>geometry_msgs</build_depend>
	<run_depend>geometry_msgs</run_depend>

	<build_depend>nav_msgs</build_depend>
	<run_depend>nav_msgs</run_depend>

	<build_depend>roscpp</build_depend>
	<run_depend>roscpp</run_depend>

	<build_depend>tf</build_depend>
	<run_depend>tf</run_depend>	

        <build_depend>tfaaa</build_depend>
        <run_depend>tfaaa</run_depend>

	<build_depend>boost</build_depend>
	<run_depend>boost</run_depend>	
	
	<build_depend>roscpp</build_depend>
	<run_depend>roscpp</run_depend>

	 <build_depend>dynamic_reconfigure</build_depend>
	 <run_depend>dynamic_reconfigure</run_depend>
</package>
