<?xml version="1.0"?>
<package>
  <name>road_layout_estimation</name>
  <version>2.0.0</version>
  <description>The road_layout_estimation package</description>

  <maintainer email="ballardini@disco.unimib.it">Augusto Luis Ballardini</maintainer>
  <license>BSD</license>
  <author email="iralabdisco@gmail.com">IRALAB Team - www.ira.disco.unimib.it</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
